@@ -1,3 +1,6 @@
+  19 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Added Group Membership for additional_users and fixed a [ instead of ( bug.
+
   15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Commented out first while loop in install portion.
 
