@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.43 2005/01/19 03:13:52 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.44 2005/01/19 06:17:03 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  19 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Various fixes related to the add_users function.  Still not yet finished.
 
   18 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added code to x86Template to format newly created partitions. Also added
